<resources>
    <string name="app_name">WPPFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WPPFit - your fitness app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_profile">Your profile</string>
    <string name="nav_add_meal">Add a meal</string>
    <string name="nav_add_exercise">Add an exercise</string>

    <string name="nav_settings_category">Settings</string>

    <string name="nav_change_profile">Change profile</string>

    <!-- EDIT PROFILE -->
    <string name="edit_profile_header">Edit your profile</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="birthday">birthday</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="accept">accept</string>
    <string name="M">M</string>
    <string name="F">F</string>

    <string name="new_profile">New profile</string>
    <string name="profile_changed">Profile changed!</string>

    <string name="home_welcome">Hello, %1$s!</string>
    <string name="home_subtitle">Calories intake today:\n%1$.1f</string>
    <string name="home_subtitle2">Calories burnt today:\n%1$.1f</string>
    <string name="home_goal">Goal calories: %1$.1f \/ %2$.1f</string>
    <string name="home_goal_carbs">Carbs:\n%1$.1f \/ %2$.1f g</string>
    <string name="home_goal_fat">Fat:\n%1$.1f \/ %2$.1f g</string>
    <string name="home_goal_protein">Protein:\n%1$.1f \/ %2$.1f g</string>

    <!-- ADD MEAL -->
    <string name="food_name">food name</string>
    <string name="meal_calories">Calories (g)</string>
    <string name="meal_fat">Fat (g)</string>
    <string name="meal_carbs">Carbs (g)</string>
    <string name="meal_protein">Protein (g)</string>
    <string name="per">per %1$s</string>

    <!-- MEAL DIALOG -->
    <string name="meal_calc">Calculate ingredients</string>
    <string name="meal_added">Meal added!</string>
    <string name="no">no</string>
    <string name="calculate">calculate</string>

    <!-- ADD EXERCISE -->
    <string name="exercise_added">Exercise added!</string>
    <string name="minutes_of">minutes of</string>
    <string name="add_exercise">Add</string>
</resources>
