<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/nav_home"
                android:title="@string/nav_home"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/nav_profile"
                android:title="@string/nav_profile"/>
        <item
                android:id="@+id/nav_meal"
                android:icon="@drawable/nav_meal"
                android:title="@string/nav_add_meal"/>
        <item
                android:id="@+id/nav_exercise"
                android:icon="@drawable/nav_exercise"
                android:title="@string/nav_add_exercise"/>
    </group>

</menu>
