<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditProfileActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/edit_profile_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/logo"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:singleLine="true"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:hint="@string/name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/surnameText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" android:singleLine="true"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/nameText"
            android:hint="@string/surname"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateText"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/surnameText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:cursorVisible="false"
            android:focusable="false" android:focusableInTouchMode="false"
            android:clickable="true" android:hint="@string/birthday"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weightText"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dateText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/weight"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heightText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/weightText"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" android:hint="@string/height"/>
    <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:checkedButton="@+id/maleButton"
            android:id="@+id/gender" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/heightText">
        <RadioButton
                android:text="M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/maleButton" android:layout_weight="1"
                android:buttonTint="@color/colorPrimaryDark"/>
        <RadioButton
                android:text="F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/femaleButton" android:layout_weight="1"
                android:buttonTint="@color/colorPrimaryDark"/>
    </RadioGroup>

    <Spinner
            android:id="@+id/activitySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:ems="10"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/gender"
            app:layout_constraintBottom_toTopOf="@+id/acceptButton"/>
    <Button
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/acceptButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/bg_enabled" android:textColor="@android:color/background_light"
            android:enabled="true" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/gender"/>

</android.support.constraint.ConstraintLayout>