<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                             tools:context=".fragments.HomeScreenFragment">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:text="@string/home_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeText"
                app:layout_constraintTop_toTopOf="@+id/topBarGuideline"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:textStyle="bold"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/home_subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/subtitle2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/home_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/subtitle" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/welcomeText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textAlignment="center"/>
        </LinearLayout>
        <TextView
                android:text="@string/home_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goalText"
                app:layout_constraintTop_toTopOf="@+id/topBarGuideline"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_margin="8dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>