<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="food name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/foodName" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:fontFamily="@font/abel"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/foodName"
            android:id="@+id/tableLayout">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/meal_calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/foodCalories"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/meal_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/foodProtein"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/meal_carbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/foodCarbs"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/meal_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/foodFat"
            />
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4" android:gravity="fill|center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">
        <EditText
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/foodNumber" android:hint="no"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:padding="18dp"
                android:layout_weight="1"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/unit" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:enabled="true"
            android:text="calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/calculateButton"
            android:background="@drawable/side_nav_bar" android:textColor="@android:color/background_light"
            style="@style/Widget.AppCompat.Button"
            android:layout_weight="1" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/tableLayout2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/meal_calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/yourFoodCalories"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/meal_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/yourFoodProtein"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/meal_carbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/yourFoodCarbs"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                    android:text="@string/meal_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/yourFoodFat"
            />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>